# fastapi-state

./: .gitignore  mkdocs.yml
.github/workflows/: publish.yml
docs/: reference.md
examples/: README.md  pyproject.toml
examples/src/fastapi_state_examples/: __init__.py  chat.html  chat.py  sa.py  simple.py
tests/: conftest.py  ruff.toml  test_decorator.py
